first succesfully comunication

--- a/rdss_slave.ioc
+++ b/rdss_slave.ioc
@@ -15,12 +15,13 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G030K6T6
 Mcu.Family=STM32G0
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP1=CRC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32G030K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
@@ -36,7 +37,8 @@ Mcu.Pin17=PA13
 Mcu.Pin18=PA14-BOOT0
 Mcu.Pin19=PB3
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=VP_CRC_VS_CRC
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -44,12 +46,12 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G030K6Tx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
+MxCube.Version=6.7.0
+MxDb.Version=DB.6.0.70
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -124,7 +126,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G030K6Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.5.1
+ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -135,8 +137,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=VLADR.ioc
-ProjectManager.ProjectName=VLADR
+ProjectManager.ProjectFileName=rdss_slave.ioc
+ProjectManager.ProjectName=rdss_slave
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -176,6 +178,8 @@ SPI1.NSSPMode=SPI_NSS_PULSE_ENABLE
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
