--- a/rdss_server.ioc
+++ b/rdss_server.ioc
@@ -72,6 +72,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
@@ -132,9 +133,9 @@ PB14.GPIO_Label=LORA_BUSSY
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=LED3
+PB3.GPIO_Label=MODE
 PB3.Locked=true
-PB3.Signal=GPIO_Output
+PB3.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=LED2
 PB4.Locked=true
