--- a/rdss_slave.ioc
+++ b/rdss_slave.ioc
@@ -4,6 +4,9 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+IWDG.IPParameters=Reload,Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=3000
 KeepUserPlacement=false
 Mcu.CPN=STM32G030K6T6
 Mcu.Family=STM32G0
@@ -17,23 +20,24 @@ Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32G030K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PB0
-Mcu.Pin1=PB1
-Mcu.Pin10=PA14-BOOT0
-Mcu.Pin11=PB3
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_IWDG_VS_IWDG
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin2=PB2
-Mcu.Pin3=PA8
-Mcu.Pin4=PA9
-Mcu.Pin5=PC6
-Mcu.Pin6=PA10
-Mcu.Pin7=PA11 [PA9]
-Mcu.Pin8=PA12 [PA10]
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin0=PA4
+Mcu.Pin1=PB0
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14-BOOT0
+Mcu.Pin12=PB3
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_IWDG_VS_IWDG
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin2=PB1
+Mcu.Pin3=PB2
+Mcu.Pin4=PA8
+Mcu.Pin5=PA9
+Mcu.Pin6=PC6
+Mcu.Pin7=PA10
+Mcu.Pin8=PA11 [PA9]
+Mcu.Pin9=PA12 [PA10]
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G030K6Tx
@@ -58,6 +62,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=KA_LED
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=DIO1
 PA8.Locked=true
