--- a/rdss_slave.ioc
+++ b/rdss_slave.ioc
@@ -5,8 +5,8 @@ CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Reload,Prescaler
-IWDG.Prescaler=IWDG_PRESCALER_32
-IWDG.Reload=3000
+IWDG.Prescaler=IWDG_PRESCALER_256
+IWDG.Reload=1000
 KeepUserPlacement=false
 Mcu.CPN=STM32G030K6T6
 Mcu.Family=STM32G0
@@ -21,23 +21,25 @@ Mcu.IPNb=7
 Mcu.Name=STM32G030K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA4
-Mcu.Pin1=PB0
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14-BOOT0
-Mcu.Pin12=PB3
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_IWDG_VS_IWDG
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin2=PB1
-Mcu.Pin3=PB2
-Mcu.Pin4=PA8
-Mcu.Pin5=PA9
-Mcu.Pin6=PC6
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11 [PA9]
-Mcu.Pin9=PA12 [PA10]
-Mcu.PinsNb=17
+Mcu.Pin1=PA5
+Mcu.Pin10=PA11 [PA9]
+Mcu.Pin11=PA12 [PA10]
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14-BOOT0
+Mcu.Pin14=PB3
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_IWDG_VS_IWDG
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin2=PA6
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB2
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PC6
+Mcu.Pin9=PA10
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G030K6Tx
@@ -66,6 +68,14 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=KA_LED
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LORA_TX_OK
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LORA_RX_OK
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=DIO1
 PA8.Locked=true
